Revert "#107 Added fix for border overlapping"
This reverts commit 5b6111cc78f5c834aa56e2cf523cda07350ad316.

--- a/src/stylesheets/enhancements/_lists.scss
+++ b/src/stylesheets/enhancements/_lists.scss
@@ -3,6 +3,5 @@ md-list-item {
         // added important to override aniwatch new introduced border which has a different, more "aggressive" color
         // https://canary.discord.com/channels/541683465599451136/543812424541798421/773621830161268756
         border-bottom: 1px solid $gray !important;  
-        margin-bottom: -1px;
     }
 }
